Added more translations
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -1,4 +1,5 @@
 {
+  "Account Password": "Account Password",
   "Apply": "Apply",
   "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
   "BringToFront": "Bring to Front",
@@ -20,12 +21,15 @@
   "Open New": "Open New",
   "Open": "Open",
   "Open in New Browser Tab": "Open In New Browser Tab",
+  "PasswordExpired": "Password Expired: Please enter a new password",
+  "PasswordChanged": "Password was successfullly changed",
   "PinToTaskbar":"Pin to taskbar",
   "Properties":"Properties",
   "Restart Later":  "Restart Later",
   "Restart Now": "Restart Now",
   "Retry": "Retry",
   "Russian": "Russian",
+  "SavePassword": "Save and return to desktop",
   "Select": "Select",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "Session could not be renewed. Logout will occur unless renewed. Click here to retry.",
   "Session Expired": "Session Expired",
