--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -1,4 +1,5 @@
 {
+  "Account Password": "Пароль от аккаунта",
   "Apply": "Применить",
   "AuthenticationFailed": "Ошибка аутентификации {{numTypes}} для {{types}}",
   "BringToFront": "На передний план",
@@ -20,12 +21,15 @@
   "Open New": "Открыть новое окно",
   "Open": "Открыть",
   "Open in New Browser Tab": "Открыть в новой вкладке браузера",
+  "PasswordExpired": "Срок действия пароля истек: пожалуйста, введите новый пароль",
+  "PasswordChanged": "пароль был успешно изменен",
   "PinToTaskbar": "Закрепить",
   "Properties": "Свойства",
   "Restart Later":  "Перезагрузить позже",
   "Restart Now": "Перезагрузить сейчас",
   "Retry": "Повторить",
   "Russian": "Русский",
+  "SavePassword": "Сохранить и вернуться на рабочий стол",
   "Select": "Выбрать",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "Сессия не смогла быть продлена. Произойдет выход если нет продления. Нажмите сюда чтобы повторить попытку.",
   "Session Expired": "Сессия истекла",
