--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -1,4 +1,5 @@
 {
+  "Account Password": "アカウントパスワード",
   "Apply": "適用",
   "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました",
   "BringToFront": "最前面に移動",
@@ -20,12 +21,15 @@
   "Open New": "新しく開く",
   "Open": "開く",
   "Open in New Browser Tab": "新しいブラウザー・タブで開く",
+  "PasswordExpired": "パスワードの期限切れ：新しいパスワードを入力してください",
+  "PasswordChanged": "パスワードが変更されました",
   "PinToTaskbar": "アプリケーションをピン留めする",
   "Properties":"プロパティー",
   "Restart Later":  "後で再起動",
   "Restart Now": "今すぐ再起動",
   "Retry": "再試行",
   "Russian": "ロシア語",
+  "SavePassword": "保存してデスクトップに戻る",
   "Select": "選択",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "セッションを更新できませんでした。更新しないとログアウトされます。再試行するにはここをクリックしてください。",
   "Session Expired": "セッションの期限が切れました。",
