Fixed capitilization in Russian and added translation for back button
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -1,5 +1,6 @@
 {
   "Account Password": "Konto Passwort",
+  "Back": "Zurück",
   "Apply": "Hinzufügen",
   "AuthenticationFailed": "Authentifizierung für {{numTypes}} Arten fehlgeschlagen. Arten sind: {{types}}",
   "BringToFront": "In den Vordergrund holen",
