--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -1,5 +1,6 @@
 {
   "Account Password": "Account Password",
+  "Back": "Back",
   "Apply": "Apply",
   "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
   "BringToFront": "Bring to Front",
