--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -1,6 +1,7 @@
 {
   "Account Password": "户口密码",
   "Apply": "应用",
+  "Back": "回去",
   "AuthenticationFailed": "{{numTypes}} 个类型验证失败 类型: {{types}}",
   "BringToFront": "置顶此程序",
   "Change Password": "更改密码",
