Fixed some translations
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -1,10 +1,10 @@
 {
   "Account Password": "Пароль от аккаунта",
   "Apply": "Применить",
-  "Back": "Вернитесь",
+  "Back": "Назад",
   "AuthenticationFailed": "Ошибка аутентификации {{numTypes}} для {{types}}",
   "BringToFront": "На передний план",
-  "Change Password": "Изменить Пароль",
+  "Change Password": "Изменить пароль",
   "Chinese": "Китайский",
   "Click here to renew your session.": "Нажмите сюда чтобы возобновить сессию.",
   "Close All": "Закрыть все",
@@ -23,7 +23,7 @@
   "Open": "Открыть",
   "Open in New Browser Tab": "Открыть в новой вкладке браузера",
   "PasswordExpired": "Срок действия пароля истек: пожалуйста, введите новый пароль",
-  "PasswordChanged": "пароль был успешно изменен",
+  "PasswordChanged": "Пароль был успешно изменен",
   "PinToTaskbar": "Закрепить",
   "Properties": "Свойства",
   "Restart Later":  "Перезагрузить позже",
