--- a/virtual-desktop/src/assets/i18n/messages.ru.xlf
+++ b/virtual-desktop/src/assets/i18n/messages.ru.xlf
@@ -31,7 +31,7 @@
         <note priority="1" from="meaning">label</note>
       </trans-unit>
       <trans-unit id="password-label" datatype="html">
-        <source>Password</source><target state="new">пароль</target>
+        <source>Password</source><target state="new">Пароль</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
           <context context-type="linenumber">24</context>
