Web Browser App: Add Russian translation for pluginDefinition.json
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/assets/i18n/pluginDefinition.i18n.ru.json
+++ b/system-apps/web-browser-app/webClient/src/assets/i18n/pluginDefinition.i18n.ru.json
@@ -1,4 +1,4 @@
 {
-  "webbrowser": "Web Browser",
-  "webbrowserdescription": "Web Browser Application"
+  "webbrowser": "Веб браузер",
+  "webbrowserdescription": "Веб браузер"
 }
