Added more translations for password reset and notification
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -1,8 +1,9 @@
 {
   "Account Password": "Konto Passwort",
-  "Back": "Zurück",
+  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "Ein falsches Passwort wurde zu oft eingegeben und das Konto wurde gesperrt. Bitte wenden Sie sich an Ihren Administrator, um weitere Anweisungen zu erhalten.",
   "Apply": "Hinzufügen",
   "AuthenticationFailed": "Authentifizierung für {{numTypes}} Arten fehlgeschlagen. Arten sind: {{types}}",
+  "Back": "Zurück",
   "BringToFront": "In den Vordergrund holen",
   "Change Password": "Passwort ändern",
   "Chinese": "Chinesisch",
@@ -19,6 +20,12 @@
   "Language Changes": "Sprache ändern",
   "Language Selected": "Ausgewählte Sprache",
   "Languages": "Sprachen",
+  "Multiple password reset services not available at this time.": "Dienste zum Zurücksetzen mehrerer Kennwörter sind derzeit nicht verfügbar.",
+  "New passwords do not match. Please try again.": "Neue Passwörter stimmen nicht überein. Bitte versuche es erneut.",
+  "No new password provided": "Kein neues Passwort angegeben.",
+  "No password provided": "Kein Passwort angegeben",
+  "No password reset authorization service available.": "Kein Autorisierungsdienst zum Zurücksetzen des Passworts verfügbar.",
+  "No username provided": "Kein Benutzername angegeben",
   "Open New": "Neu Öffnen",
   "Open": "Öffnen",
   "Open in New Browser Tab": "In neuem Browser Tab öffnen",
@@ -37,6 +44,9 @@
   "Session Expiring Soon": "Sitzung läuft bald ab",
   "Session Renewal Error": "Fehler beim Erneuern der Sitzung",
   "Session will expire unless renewed.": "Sitzung wird in {{expirationInMS}} Sekunden ablaufen, falls nicht erneuert.",
+  "The current password is incorrect. Please try again.": "Das aktuelle Passwort ist falsch. Bitte versuche es erneut.",
+  "The new password format is incorrect. Please try again.": "Das neue Passwortformat ist falsch. Bitte versuche es erneut.",
+  "The username entered is not found. Please try again.": "Der eingegebene Benutzername wurde nicht gefunden. Bitte versuche es erneut.",
   "UsernameRequired": "Benutzername erforderlich",
   "Would you like to restart the desktop?": "Möchten Sie den Desktop neu starten?",
   "UnpinFromTaskbar": "Anwendung von Taskbar lösen"
