--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -1,8 +1,9 @@
 {
   "Account Password": "Mot de passe du compte",
+  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "Un mot de passe incorrect a été entré trop de fois et le compte a été verrouillé. Veuillez contacter votre administrateur pour plus d'instructions.",
   "Apply": "Appliquer",
-  "Back": "Retourner",
   "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
+  "Back": "Retourner", 
   "BringToFront": "Mettre au premier plan",
   "Change Password": "Changer de mot de Passe",
   "Chinese": "Chinois",
@@ -19,6 +20,12 @@
   "Language Changes": "Changement de Langue",
   "Language Selected": "Langue Sélectionnée",
   "Languages": "Langues",
+  "Multiple password reset services not available at this time.": "Plusieurs services de réinitialisation de mot de passe ne sont pas disponibles pour le moment.",
+  "New passwords do not match. Please try again.": "Les nouveaux mots de passe ne correspondent pas. Veuillez réessayer.",
+  "No new password provided": "Aucun nouveau mot de passe fourni.",
+  "No password provided": "Aucun mot de passe fourni",
+  "No password reset authorization service available.": "Aucun service d'autorisation de réinitialisation de mot de passe disponible.",
+  "No username provided": "Aucun nom d'utilisateur fourni",
   "Open New": "Nouvelle Fenêtre",
   "Open": "Ouvrir",
   "Open in New Browser Tab": "Ouvrir dans un nouvel onglet",
@@ -37,6 +44,9 @@
   "Session Expiring Soon": "Votre session va bientôt expirer",
   "Session Renewal Error": "Erreur de renouvellement de session",
   "Session will expire unless renewed.": "Votre session va expirer dans {{expirationInMS}} secondes sauf si elle est renouvelée.",
+  "The current password is incorrect. Please try again.": "Le mot de passe actuel est incorrect. Veuillez réessayer.",
+  "The new password format is incorrect. Please try again.": "Le nouveau format de mot de passe est incorrect. Veuillez réessayer.",
+  "The username entered is not found. Please try again.": "Le nom d'utilisateur entré est introuvable. Veuillez réessayer.",
   "UsernameRequired": "Nom d'utilisateur requis",
   "Would you like to restart the desktop?": "Voulez-vous redémarrer votre session?",
   "UnpinFromTaskbar": "Désépingler"
