--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -1,8 +1,9 @@
 {
   "Account Password": "户口密码",
+  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "密码输入错误的次数过多，帐户已被锁定。请与管理员联系以获取更多说明。",
   "Apply": "应用",
-  "Back": "回去",
   "AuthenticationFailed": "{{numTypes}} 个类型验证失败 类型: {{types}}",
+  "Back": "回去",
   "BringToFront": "置顶此程序",
   "Change Password": "更改密码",
   "Chinese": "中文",
@@ -19,6 +20,12 @@
   "Language Changes": "语言变更",
   "Language Selected": "当前语言",
   "Languages": "语言",
+  "Multiple password reset services not available at this time.": "目前无法使用多种密码重置服务。",
+  "New passwords do not match. Please try again.": "新密码不匹配。请再试一遍。",
+  "No new password provided": "没有提供新密码。",
+  "No password provided": "没有提供密码",
+  "No password reset authorization service available.": "没有可用的密码重置授权服务。",  
+  "No username provided": "没有提供用户名",
   "Open New": "打开新会话",
   "Open": "打开",
   "Open in New Browser Tab": "在新的浏览器标签页打开",
@@ -37,6 +44,9 @@
   "Session Expiring Soon": "会话即将过期",
   "Session Renewal Error": "会话续订发生错误",
   "Session will expire unless renewed.": "会话将在{{expirationInMS}}秒后过期",
+  "The current password is incorrect. Please try again.": "当前密码错误。请再试一遍。",
+  "The new password format is incorrect. Please try again.": "新密码格式不正确。请再试一遍。",
+  "The username entered is not found. Please try again.": "找不到输入的用户名。请再试一遍。",
   "UsernameRequired": "用户名不能为空",
   "UnpinFromTaskbar": "将此程序从任务栏移除",
   "Would you like to restart the desktop?": "是否立即重新启动？"
