--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -1,8 +1,9 @@
 {
   "Account Password": "Account Password",
-  "Back": "Back",
+  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.",
   "Apply": "Apply",
   "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
+  "Back": "Back", 
   "BringToFront": "Bring to Front",
   "Change Password": "Change Password",
   "Chinese": "Chinese",
@@ -19,6 +20,12 @@
   "Language Changes": "Language Changes",
   "Language Selected": "Language Selected",
   "Languages": "Languages",
+  "Multiple password reset services not available at this time.": "Multiple password reset services not available at this time.",
+  "New passwords do not match. Please try again.": "New passwords do not match. Please try again.",
+  "No new password provided": "No new password provided.",
+  "No password provided": "No password provided",
+  "No password reset authorization service available.": "No password reset authorization service available.",
+  "No username provided": "No username provided",
   "Open New": "Open New",
   "Open": "Open",
   "Open in New Browser Tab": "Open In New Browser Tab",
@@ -37,6 +44,9 @@
   "Session Expiring Soon": "Session Expiring Soon",
   "Session Renewal Error": "Session Renewal Error",
   "Session will expire unless renewed.": "Session will expire in {{expirationInMS}} seconds unless renewed.",
+  "The current password is incorrect. Please try again.": "The current password is incorrect. Please try again.",
+  "The new password format is incorrect. Please try again.": "The new password format is incorrect. Please try again.",
+  "The username entered is not found. Please try again.": "The username entered is not found. Please try again.",
   "UnpinFromTaskbar": "Unpin from taskbar",
   "UsernameRequired": "Username required",
   "Would you like to restart the desktop?": "Would you like to restart the desktop?"
