--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -1,8 +1,9 @@
 {
   "Account Password": "Пароль от аккаунта",
+  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "Неправильный пароль был введен слишком много раз, и учетная запись была заблокирована. Пожалуйста, свяжитесь с вашим администратором для получения дальнейших инструкций.",
   "Apply": "Применить",
-  "Back": "Назад",
   "AuthenticationFailed": "Ошибка аутентификации {{numTypes}} для {{types}}",
+  "Back": "Назад",
   "BringToFront": "На передний план",
   "Change Password": "Изменить пароль",
   "Chinese": "Китайский",
@@ -19,6 +20,12 @@
   "Language Changes": "Смена языка",
   "Language Selected": "Выбранный язык",
   "Languages": "Языки",
+  "Multiple password reset services not available at this time.": "Несколько служб сброса пароля не доступны в настоящее время.",
+  "New passwords do not match. Please try again.": "Новый пароль и его подтверждение не совпадают. Пожалуйста, попробуйте еще раз",
+  "No new password provided": "Новый пароль не указан.",
+  "No password provided": "Пароль не указан",
+  "No password reset authorization service available.": "Служба авторизации сброса пароля недоступна.",  
+  "No username provided": "Имя пользователя не указано",
   "Open New": "Открыть новое окно",
   "Open": "Открыть",
   "Open in New Browser Tab": "Открыть в новой вкладке браузера",
@@ -37,6 +44,9 @@
   "Session Expiring Soon": "Сессия скоро истекает",
   "Session Renewal Error": "Ошибка обновления сессии",
   "Session will expire unless renewed.": "Сессия истекает через {{expirationInMS}} секунд если не обновлено.",
+  "The current password is incorrect. Please try again.": "Текущий пароль неверен. Пожалуйста, попробуйте еще раз.",
+  "The new password format is incorrect. Please try again.": "Новый пароль имеет неверный формат. Пожалуйста, попробуйте еще раз",
+  "The username entered is not found. Please try again.": "Введенное имя пользователя не найдено. Пожалуйста, попробуйте еще раз.",
   "UsernameRequired": "Введите имя пользователя",
   "UnpinFromTaskbar": "Открепить",
   "Would you like to restart the desktop?": "Перезагрузить рабочий стол?"
