--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -1,6 +1,5 @@
 {
   "Account Password": "Mot de passe du compte",
-  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "Un mot de passe incorrect a été entré trop de fois et le compte a été verrouillé. Veuillez contacter votre administrateur pour plus d'instructions.",
   "Apply": "Appliquer",
   "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
   "Back": "Retourner", 
@@ -16,15 +15,16 @@
   "For language changes to take effect, Zowe must be restarted.": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
   "French": "Français",
   "German": "Allemand",
+  "Incorrect password or account is locked. Please contact your administrator.": "Un mot de passe ou un compte incorrect est verrouillé. Veuillez contacter votre administrateur.",
   "Japanese": "Japonais",
   "Language Changes": "Changement de Langue",
   "Language Selected": "Langue Sélectionnée",
   "Languages": "Langues",
-  "Multiple password reset services not available at this time.": "Plusieurs services de réinitialisation de mot de passe ne sont pas disponibles pour le moment.",
+  "Multiple password reset is not available.": "La réinitialisation de plusieurs mots de passe n'est pas disponible.",
   "New passwords do not match. Please try again.": "Les nouveaux mots de passe ne correspondent pas. Veuillez réessayer.",
   "No new password provided": "Aucun nouveau mot de passe fourni.",
   "No password provided": "Aucun mot de passe fourni",
-  "No password reset authorization service available.": "Aucun service d'autorisation de réinitialisation de mot de passe disponible.",
+  "No password reset service available.": "Aucun service de réinitialisation de mot de passe disponible.",
   "No username provided": "Aucun nom d'utilisateur fourni",
   "Open New": "Nouvelle Fenêtre",
   "Open": "Ouvrir",
@@ -44,9 +44,8 @@
   "Session Expiring Soon": "Votre session va bientôt expirer",
   "Session Renewal Error": "Erreur de renouvellement de session",
   "Session will expire unless renewed.": "Votre session va expirer dans {{expirationInMS}} secondes sauf si elle est renouvelée.",
-  "The current password is incorrect. Please try again.": "Le mot de passe actuel est incorrect. Veuillez réessayer.",
   "The new password format is incorrect. Please try again.": "Le nouveau format de mot de passe est incorrect. Veuillez réessayer.",
-  "The username entered is not found. Please try again.": "Le nom d'utilisateur entré est introuvable. Veuillez réessayer.",
+  "Username or password is incorrect. Please try again.": "L'identifiant ou le mot de passe est incorrect. Veuillez réessayer.",
   "UsernameRequired": "Nom d'utilisateur requis",
   "Would you like to restart the desktop?": "Voulez-vous redémarrer votre session?",
   "UnpinFromTaskbar": "Désépingler"
