--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -1,6 +1,5 @@
 {
   "Account Password": "アカウントパスワード",
-  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "間違ったパスワードが何度も入力され、アカウントがロックされています。詳細な手順については、管理者にお問い合わせください。",
   "Apply": "適用",
   "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました",
   "Back": "戻る",
@@ -16,16 +15,17 @@
   "For language changes to take effect, Zowe must be restarted.": "言語の変更を反映するには、Zoweを再起動する必要があります。",
   "French": "フランス語",
   "German": "ドイツ語",
+  "Incorrect password or account is locked. Please contact your administrator.": "パスワードが間違っているか、アカウントがロックされているため、ログインに失敗しました。 管理者に連絡してください。",
   "Japanese": "日本語",
   "Language Changes": "言語変更",
   "Language Selected": "選択された言語",
   "Languages": "言語",
-  "Multiple password reset services not available at this time.": "現在、複数のパスワードリセットサービスはご利用いただけません。",
-  "New passwords do not match. Please try again.": "新しいパスワードが一致しません。もう一度やり直してください。",
-  "No new password provided": "新しいパスワードは提供されていません。",
+  "Multiple password reset is not available.": "複数のパスワードをリセットできません。",
+  "New passwords do not match. Please try again.": "新しいパスワードが一致しません。 もう一度やり直してください。",
+  "No new password provided": "パスワードがありません。",
   "No password provided": "パスワードが提供されていません",
-  "No password reset authorization service available.": "利用可能なパスワードリセット認証サービスはありません。",
-  "No username provided": "ユーザー名が提供されていません",
+  "No password reset service available.": "パスワードリセットのサービスがありません。",
+  "No username provided": "ユーザー名がありません。",
   "Open New": "新しく開く",
   "Open": "開く",
   "Open in New Browser Tab": "新しいブラウザー・タブで開く",
@@ -44,9 +44,8 @@
   "Session Expiring Soon": "セッションの期限がもうすぐ切れます。",
   "Session Renewal Error": "セッション更新エラー。",
   "Session will expire unless renewed.": "セッションを更新しないと {{expirationInMS}} 秒で切れます。",
-  "The current password is incorrect. Please try again.": "現在のパスワードは正しくありません。もう一度やり直してください。",
   "The new password format is incorrect. Please try again.": "新しいパスワードの形式が正しくありません。もう一度やり直してください。",
-  "The username entered is not found. Please try again.": "入力されたユーザー名が見つかりません。もう一度やり直してください。",
+  "Username or password is incorrect. Please try again.": "ユーザー名かパスワードが間違っています。もう一度やり直してください。",
   "UsernameRequired": "ユーザー名が必要です",
   "UnpinFromTaskbar": "アプリケーションのピン留めをはずす",
   "Would you like to restart the desktop?": "デスクトップを再起動しますか?"
