--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -1,6 +1,5 @@
 {
   "Account Password": "Пароль от аккаунта",
-  "An incorrect password has been entered too many times and the account has been locked. Please contact your administrator for further instructions.": "Неправильный пароль был введен слишком много раз, и учетная запись была заблокирована. Пожалуйста, свяжитесь с вашим администратором для получения дальнейших инструкций.",
   "Apply": "Применить",
   "AuthenticationFailed": "Ошибка аутентификации {{numTypes}} для {{types}}",
   "Back": "Назад",
@@ -16,15 +15,16 @@
   "For language changes to take effect, Zowe must be restarted.": "Чтобы изменить язык, необходимо перезагрузить Zowe.",
   "French": "Французский",
   "German": "Немецкий",
+  "Incorrect password or account is locked. Please contact your administrator.": "Неверный пароль или аккаунт заблокирован. Пожалуйста, свяжитесь с вашим администратором.",
   "Japanese": "Японский",
   "Language Changes": "Смена языка",
   "Language Selected": "Выбранный язык",
   "Languages": "Языки",
-  "Multiple password reset services not available at this time.": "Несколько служб сброса пароля не доступны в настоящее время.",
+  "Multiple password reset is not available.": "Многократный сброс пароля недоступен.",
   "New passwords do not match. Please try again.": "Новый пароль и его подтверждение не совпадают. Пожалуйста, попробуйте еще раз",
   "No new password provided": "Новый пароль не указан.",
   "No password provided": "Пароль не указан",
-  "No password reset authorization service available.": "Служба авторизации сброса пароля недоступна.",  
+  "No password reset service available.": "Служба сброса пароля недоступна.",
   "No username provided": "Имя пользователя не указано",
   "Open New": "Открыть новое окно",
   "Open": "Открыть",
@@ -44,9 +44,8 @@
   "Session Expiring Soon": "Сессия скоро истекает",
   "Session Renewal Error": "Ошибка обновления сессии",
   "Session will expire unless renewed.": "Сессия истекает через {{expirationInMS}} секунд если не обновлено.",
-  "The current password is incorrect. Please try again.": "Текущий пароль неверен. Пожалуйста, попробуйте еще раз.",
   "The new password format is incorrect. Please try again.": "Новый пароль имеет неверный формат. Пожалуйста, попробуйте еще раз",
-  "The username entered is not found. Please try again.": "Введенное имя пользователя не найдено. Пожалуйста, попробуйте еще раз.",
+  "Username or password is incorrect. Please try again.": "Имя пользователя или пароль неверны. Пожалуйста, попробуйте еще раз.",
   "UsernameRequired": "Введите имя пользователя",
   "UnpinFromTaskbar": "Открепить",
   "Would you like to restart the desktop?": "Перезагрузить рабочий стол?"
