Cross-launch app via URL
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -48,5 +48,7 @@
   "Username or password is incorrect. Please try again.": "Username or password is incorrect. Please try again.",
   "UnpinFromTaskbar": "Unpin from taskbar",
   "UsernameRequired": "Username required",
-  "Would you like to restart the desktop?": "Would you like to restart the desktop?"
+  "Would you like to restart the desktop?": "Would you like to restart the desktop?",
+  "Unable to launch application": "Unable to launch application",
+  "Plugin not found for identifier {{targetPluginId}}": "Plugin not found for identifier {{targetPluginId}}"
 }
