--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -49,5 +49,7 @@
   "Username or password is incorrect. Please try again.": "Benutzername oder Passwort ist falsch. Bitte versuche es erneut.",
   "UsernameRequired": "Benutzername erforderlich",
   "Would you like to restart the desktop?": "Möchten Sie den Desktop neu starten?",
-  "UnpinFromTaskbar": "Anwendung von Taskbar lösen"
+  "UnpinFromTaskbar": "Anwendung von Taskbar lösen",
+  "Unable to launch application": "Unable to launch application",
+  "Plugin not found for identifier {{targetPluginId}}": "Plugin not found for identifier {{targetPluginId}}"
 }
