--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -50,5 +50,7 @@
   "Username or password is incorrect. Please try again.": "Имя пользователя или пароль неверны. Пожалуйста, попробуйте еще раз.",
   "UsernameRequired": "Введите имя пользователя",
   "UnpinFromTaskbar": "Открепить",
-  "Would you like to restart the desktop?": "Перезагрузить рабочий стол?"
+  "Would you like to restart the desktop?": "Перезагрузить рабочий стол?",
+  "Unable to launch application": "Не удалось запустить приложение",
+  "Plugin not found for identifier {{targetPluginId}}": "Не найден плагин с идентификтором {{targetPluginId}}"
 }
