--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -49,7 +49,5 @@
   "Username or password is incorrect. Please try again.": "用户名或密码不正确。请再试一遍。",
   "UsernameRequired": "用户名不能为空",
   "UnpinFromTaskbar": "将此程序从任务栏移除",
-  "Would you like to restart the desktop?": "是否立即重新启动？",
-  "Unable to launch application": "Unable to launch application",
-  "Plugin not found for identifier {{targetPluginId}}": "Plugin not found for identifier {{targetPluginId}}"
+  "Would you like to restart the desktop?": "是否立即重新启动？"
 }
