--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -9,8 +9,10 @@
   "Click here to renew your session.": "Cliquez ici pour renouveler votre session.",
   "Close All": "Fermer toutes les instances",
   "Close": "Fermer",
+  "Color": "Couleur",
   "Continue": "Continuer",
   "Dismiss": "Ignorer",
+  "Drag wallpaper here or": "Déposez le fond d'écran ici, ou",
   "English": "Anglais",
   "For language changes to take effect, Zowe must be restarted.": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
   "French": "Français",
@@ -23,16 +25,20 @@
   "Multiple password reset is not available.": "La réinitialisation de plusieurs mots de passe n'est pas disponible.",
   "New passwords do not match. Please try again.": "Les nouveaux mots de passe ne correspondent pas. Veuillez réessayer.",
   "No new password provided": "Aucun nouveau mot de passe fourni.",
+  "No Notifications": "Aucune notification",
   "No password provided": "Aucun mot de passe fourni",
   "No password reset service available.": "Aucun service de réinitialisation de mot de passe disponible.",
   "No username provided": "Aucun nom d'utilisateur fourni",
   "Open New": "Nouvelle Fenêtre",
   "Open": "Ouvrir",
   "Open in New Browser Tab": "Ouvrir dans un nouvel onglet",
+  "or hue.": "ou la teinte",
   "PasswordExpired": "Mot de passe expiré: Veuillez saisir un nouveau mot de passe",
   "PasswordChanged": "Le mot de passe a été changé avec succès",
+  "Personalization": "Personnalisation",
   "PinToTaskbar": "Épingler",
   "Properties":"Propriétés",
+  "Reset to default": "Rétablir les valeurs par défaut",
   "Restart Later":  "Redémarrer Plus Tard",
   "Restart Now": "Redémarrer Maintenant",
   "Retry": "Réessayer",
@@ -40,14 +46,19 @@
   "SavePassword": "Enregistrer et revenir au bureau",
   "Search": "Chercher",
   "Select": "Sélectionner",
+  "Select color": "Choisissez la couleur",
+  "Select lightness.": "Sélectionnez l'intensité",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "La session n'a pas pu être renouvelée. Cliquez ici pour réessayer.",
   "Session Expired": "La session a expiré",
   "Session Expiring Soon": "Votre session va bientôt expirer",
   "Session Renewal Error": "Erreur de renouvellement de session",
   "Session will expire unless renewed.": "Votre session va expirer dans {{expirationInMS}} secondes sauf si elle est renouvelée.",
+  "Size": "Taille",
   "The new password format is incorrect. Please try again.": "Le nouveau format de mot de passe est incorrect. Veuillez réessayer.",
+  "Upload": "Télécharger",
   "Username or password is incorrect. Please try again.": "L'identifiant ou le mot de passe est incorrect. Veuillez réessayer.",
   "UsernameRequired": "Nom d'utilisateur requis",
+  "Wallpaper": "Fond d'écran",
   "Would you like to restart the desktop?": "Voulez-vous redémarrer votre session?",
   "UnpinFromTaskbar": "Désépingler"
 }
