--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -9,8 +9,10 @@
   "Click here to renew your session.": "セッションを更新するにはここをクリックしてください。",
   "Close All": "すべて閉じる",
   "Close": "閉じる",
+  "Color": "色",
   "Continue": "続行",
   "Dismiss": "閉じる",
+  "Drag wallpaper here or": "壁紙をここにドラッグ、または",
   "English": "英語",
   "For language changes to take effect, Zowe must be restarted.": "言語の変更を反映するには、Zoweを再起動する必要があります。",
   "French": "フランス語",
@@ -23,17 +25,21 @@
   "Multiple password reset is not available.": "複数のパスワードをリセットできません。",
   "New passwords do not match. Please try again.": "新しいパスワードが一致しません。 もう一度やり直してください。",
   "No new password provided": "パスワードがありません。",
+  "No Notifications": "通知なし",
   "No password provided": "パスワードが提供されていません",
   "No password reset service available.": "パスワードリセットのサービスがありません。",
   "No username provided": "ユーザー名がありません。",
   "Open New": "新しく開く",
   "Open": "開く",
   "Open in New Browser Tab": "新しいブラウザー・タブで開く",
+  "or hue.": "色合い",
   "PasswordExpired": "パスワードの期限切れ：新しいパスワードを入力してください",
   "PasswordChanged": "パスワードが変更されました",
+  "Personalization": "カスタマイズ",
   "PinToTaskbar": "アプリケーションをピン留めする",
   "Refresh applications": "アプリケーションを再ロード",
   "Properties":"プロパティー",
+  "Reset to default": "デフォルト値に戻す",
   "Refresh Applications": "アプリケーションを再ロード",
   "Restart Later":  "後で再起動",
   "Restart Now": "今すぐ再起動",
@@ -42,14 +48,19 @@
   "SavePassword": "保存してデスクトップに戻る",
   "Search": "検索",
   "Select": "選択",
+  "Select color": "色の選択",
+  "Select lightness.": "明るさの選択",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "セッションを更新できませんでした。更新しないとログアウトされます。再試行するにはここをクリックしてください。",
   "Session Expired": "セッションの期限が切れました。",
   "Session Expiring Soon": "セッションの期限がもうすぐ切れます。",
   "Session Renewal Error": "セッション更新エラー。",
   "Session will expire unless renewed.": "セッションを更新しないと {{expirationInMS}} 秒で切れます。",
+  "Size": "サイズ",
   "The new password format is incorrect. Please try again.": "新しいパスワードの形式が正しくありません。もう一度やり直してください。",
+  "Upload": "アップロード",
   "Username or password is incorrect. Please try again.": "ユーザー名かパスワードが間違っています。もう一度やり直してください。",
   "UsernameRequired": "ユーザー名が必要です",
   "UnpinFromTaskbar": "アプリケーションのピン留めをはずす",
+  "Wallpaper": "背景",
   "Would you like to restart the desktop?": "デスクトップを再起動しますか?"
 }
