--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -47,8 +47,8 @@
   "SavePassword": "Сохранить и вернуться на рабочий стол",
   "Search": "Поиск",
   "Select": "Выбрать",
-  "Select color": "Выберите цвет",
-  "Select lightness.": "Выберите легкость.",
+  "Select color": "Выбрать цвет",
+  "Select lightness.": "Выбрать легкость.",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "Сессия не смогла быть продлена. Произойдет выход если нет продления. Нажмите сюда чтобы повторить попытку.",
   "Session Expired": "Сессия истекла",
   "Session Expiring Soon": "Сессия скоро истекает",
