Added missing translation
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -38,6 +38,7 @@
   "Personalization": "Personalisierung",
   "PinToTaskbar": "Anwendung anheften",
   "Properties": "Eigenschaften",
+  "Refresh Applications": "Applikationen neu laden",
   "Reset to default": "Auf Standard zurücksetzen",
   "Restart Later":  "Später neu starten",
   "Restart Now": "Jetzt neu starten",
