--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -38,6 +38,7 @@
   "Personalization": "Personnalisation",
   "PinToTaskbar": "Épingler",
   "Properties":"Propriétés",
+  "Refresh Applications": "Actualiser les applications",
   "Reset to default": "Rétablir les valeurs par défaut",
   "Restart Later":  "Redémarrer Plus Tard",
   "Restart Now": "Redémarrer Maintenant",
