--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -33,6 +33,7 @@
   "PasswordChanged": "密码修改成功",
   "PinToTaskbar":"将此程序锁定到任务栏",
   "Properties":"属性",
+  "Refresh Applications": "刷新应用程序",
   "Restart Later":  "稍后重新启动",
   "Restart Now": "立即重新启动",
   "Retry": "重试",
