Added Async await for getting the llist of files Added doc strings Added support for css modules and migrated from js-based modules
Signed-off-by: Parth Shandilya <parth1989shandilya@gmail.com>

--- a/system-apps/desktop-documentation-viewer/webClient/src/assets/i18n/pluginDefinition.i18n.en.json
+++ b/system-apps/desktop-documentation-viewer/webClient/src/assets/i18n/pluginDefinition.i18n.en.json
@@ -1,4 +1,4 @@
 {
-  "samplereact": "Zowe Desktop Documentation Viewer",
-  "SampleReactPluginDescription": "App enabling users to view text & pdf documents bundled into plugins."
+  "desktopDocumentationViewer": "Zowe Desktop Documentation Viewer",
+  "desktopDocumentationViewerDescription": "App enabling users to view text & pdf documents bundled into plugins."
 }
