Upgraded popper.js + small Personalization menu updates
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -12,7 +12,7 @@
   "Color": "Color",
   "Continue": "Continue",
   "Dismiss": "Dismiss",
-  "Drag wallpaper here or": "Drag wallpaper here or",
+  "Drag wallpaper here or": "Drag below or",
   "English": "English",
   "For language changes to take effect, Zowe must be restarted.": "For language changes to take effect, Zowe must be restarted.",
   "French": "French",
